# python-llm-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_llm_template/api/: main.py
tests/: test_health.py  test_smoke.py
