# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-llm-template"
version = "0.1.0"
description = "Template for Python LLM projects (FastAPI, tests, linting, CI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pre-commit>=3.7.0",
  "httpx>=0.27.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "B", "C4", "SIM", "TCH", "RUF"]
exclude = ["venv", ".venv", ".git", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# pytest config lives here so no extra file needed
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
