[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "python-llm-template"
version = "0.1.0"
description = "Template for Python LLM projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nicolas Preuss", email = "preuss.nicolas@gmail.com" }]
dependencies = ["fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.7",
  "ruff>=0.5",
  "mypy>=1.10",
]

# Tell Hatchling where your package lives (src/ layout)
[tool.hatch.build.targets.wheel]
packages = ["src/python_llm_template"]

# (Optional but tidy) include only needed files in sdist
[tool.hatch.build.targets.sdist]
include = [
  "/src/python_llm_template",
  "/README.md",
  "/pyproject.toml",
  "/.pre-commit-config.yaml",
  "/.github/workflows/ci.yml",
]
